# realman_VLA

./: .gitignore  To_V2.1.py
RoboCOIN-main/: README.md  README_zh-CN.md  pyproject.toml  run_interference.py  run_interference_act20251226.py  test_drag.py  机械臂运动测试.py  机械臂连接测试.py
RoboCOIN-main/scripts/: connect_realman.py  detect_camera.py  test_end_effector.py
RoboDriver/: README.md  README_zh.md
RoboDriver-Server/: README.md
RoboDriver-Server/arm/: debug_server_docker.sh  debug_server_docker_gpu.sh  start_server_docker.sh  start_server_docker_gpu.sh
RoboDriver-Server/logtail/: setup_logtail.sh
RoboDriver-Server/ui/: requirements.txt  setup_ui.py
RoboDriver-Server/update/: update.py  update.sh
RoboDriver-Server/x86/: debug_server_docker.sh  debug_server_docker_gpu.sh  environment.yml  setup.yaml  start_server_docker.sh  start_server_docker_gpu.sh
lerobot/: smolvla_interference.py  xvla_debug.py  xvla_interference.py
lerobot-main/: check_pose.py  combine.py  convert_to_video_LerobotV2.1.py  identity_cameras.py  run_inference.py  run_interference.py  run_realman_robot.py  test_driver.py  test_socket.py  wandb_test.py
lerobot-main/Robotic_Arm/: rm_ctypes_wrap.py  rm_robot_interface.py
lerobot_realman_spacemouse/: camera_check.py
robodriver-robot-realman1-aio-dora/: README.md  jiazhua.py  查询机械臂状态.py
robodriver-robot-realman1-aio-dora/dora/: dataflow.yml
robodriver-robot-realman1-aio-dora/dora/nodes/dora_arm_realman/: pyproject.toml
robodriver-robot-realman1-aio-dora/dora/nodes/dora_arm_realman/dora_arm_realman/: main.py  print_joint.py  test.py
(+58 files in other folders)
